[package]
name = "whitenoise-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
jsonrpc-core = "15.1.0"
pubsub = { package = "jsonrpc-pubsub", version = "15.1.0" }
log = "0.4.8"
serde = "1.0.101"
serde_json = "1.0.41"
whitenoisers = { git = 'https://github.com/Evanesco-Labs/WhiteNoise.rs.git', rev = "0e6d0ce" }
libp2p = { version = "0.37.1" }
rand = "0.7"
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.1"
lazy_static = "1.4.0"
clap = "2.27.0"

[[example]]
name = "rpc-server"
path = "examples/rpc-server.rs"